add submodule ldoc

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Lust"]
 	path = Lust
 	url = https://github.com/weshoke/Lust.git
+[submodule "ldoc"]
+	path = ldoc
+	url = https://github.com/stevedonovan/LDoc.git
